crates/ignis_analyzer/tests/snapshots/golden_ok__generic_bounds_allow_trait_method_lookup_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn hashValue(value: T): i32
  body:
    Block : never
      statements:
        Return : never
          MethodCall(hash) : i32
            receiver:
              Reference(&) : &T
                Variable(value [param]) : T

fn main(): i32
  body:
    Block : never
      statements:
        Let(key) : void
          init:
            RecordInit(Key) : record Key
              field[0]:
                Literal(Int32(42)) : i32
        Return : never
          Call(hashValue) : i32
            args:
              [0]:
                Variable(key) : record Key

--- Variable Initializers ---

key: record Key = <complex: record Key>
