crates/ignis_analyzer/tests/snapshots/golden_ok__if_statement_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn check(x: i32): i32
  body:
    Block : never
      statements:
        If : never
          cond:
            Binary(GreaterThan) : bool
              left:
                Variable(x [param]) : i32
              right:
                Literal(Int32(0)) : i32
          then:
            Block : never
              statements:
                Return : never
                  Literal(Int32(1)) : i32
          else:
            Block : never
              statements:
                Return : never
                  Literal(Int32(0)) : i32
