crates/ignis_analyzer/tests/snapshots/golden_ok__infer_deferred_from_assignment_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(x [mut]) : void
        ExprStmt : i32
          Assign(=) : i32
            target:
              Variable(x [mut]) : i32
            value:
              Literal(Int32(10)) : i32
        Return : never
          Variable(x [mut]) : i32
