crates/ignis_analyzer/tests/snapshots/golden_ok__infer_from_initializer_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(42)) : i32
        Return : never
          Variable(x) : i32

--- Variable Initializers ---

x: i32 = Literal(Int32(42))
