crates/ignis_analyzer/tests/snapshots/golden_ok__infer_multiple_variables_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(a) : void
          init:
            Literal(Int32(10)) : i32
        Let(b) : void
          init:
            Literal(Int32(20)) : i32
        Let(c) : void
          init:
            Binary(Add) : i32
              left:
                Variable(a) : i32
              right:
                Variable(b) : i32
        Return : never
          Variable(c) : i32

--- Variable Initializers ---

a: i32 = Literal(Int32(10))
b: i32 = Literal(Int32(20))
c: i32 = Binary(Add, Variable(a), Variable(b))
