crates/ignis_analyzer/tests/snapshots/golden_ok__legacy_attributes_remain_compatible_after_attribute_ast_changes_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn smoke(): void
  body:
    Block : never
      statements:
        Let(usedValue) : void
          init:
            MethodCall(greet) : i32
              receiver:
                Reference(&) : &record Person
                  RecordInit(Person) : record Person
                    field[0]:
                      Literal(Int32(3)) : i32
        Let(unusedValue) : void
          init:
            Binary(Add) : i32
              left:
                Variable(usedValue) : i32
              right:
                Literal(Int32(1)) : i32
        Return : never

--- Variable Initializers ---

unusedValue: i32 = Binary(Add, Variable(usedValue), Literal(Int32(1)))
usedValue: i32 = <complex: i32>
