crates/ignis_analyzer/tests/snapshots/golden_ok__literal_adapts_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'y'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:47-65
[WARN] A0122: unused variable 'z'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:70-88
