crates/ignis_analyzer/tests/snapshots/golden_ok__literal_adapts_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn test(): i8
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(42)) : i8
        Let(y) : void
          init:
            Literal(Int32(1000)) : i16
        Let(z) : void
          init:
            Literal(Float64(3.14)) : f32
        Return : never
          Variable(x) : i8

--- Variable Initializers ---

x: i8 = Literal(Int32(42))
y: i16 = Literal(Int32(1000))
z: f32 = Literal(Float64(3.14))
