crates/ignis_analyzer/tests/snapshots/golden_ok__match_u8_with_literal_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(ch) : void
          init:
            Literal(Int32(40)) : u8
        ExprStmt : void
          Match : void
            scrutinee:
              Variable(ch) : u8
            arm[0]:
              pattern: Literal { value: Int32(40) }
              body:
                Block : void
            arm[1]:
              pattern: Wildcard
              body:
                Block : void
        Return : never

--- Variable Initializers ---

ch: u8 = Literal(Int32(40))
