crates/ignis_analyzer/tests/snapshots/golden_ok__multiple_functions_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn helper(x: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Mul) : i32
            left:
              Variable(x [param]) : i32
            right:
              Literal(Int32(2)) : i32

fn main(): i32
  body:
    Block : never
      statements:
        Return : never
          Call(helper) : i32
            args:
              [0]:
                Literal(Int32(21)) : i32
