crates/ignis_analyzer/tests/snapshots/golden_ok__mutable_reference_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 81
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0013: Cannot assign to immutable variable 'x'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:42-48
[ERROR] A0045: Type mismatch: expected '&mut i32', found 'i32'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:42-48
