crates/ignis_analyzer/tests/snapshots/golden_ok__mutable_reference_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn modify(x: &mut i32): void
  body:
    Block : never
      statements:
        ExprStmt : &mut i32
          Assign(=) : &mut i32
            target:
              Dereference(*) : i32
                Variable(x [param]) : &mut i32
            value:
              Literal(Int32(42)) : i32
        Return : never
